Delete lending code
